match first half

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
             /* navigation menu */
             nav {
-                background: rgb(150, 20, 41);
+                background: rgb(150, 80, 41);
                 margin: 0 auto;
+                margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
             }
@@ -85,7 +86,7 @@
                 <div class="content">
                      <header> Cullen Wheatley
                      </header>
-                     <p>Client Relations Team Leader at Lucid</p>
+                     <p>Client Relations & Sales at Lucid</p>
                      <section class="interests">
                             <header>Interests</header>
                             <ul>
